src/test/ui/issues/issue-57843.stderr
error[E0277]: the trait bound `for<'a> [closure@$DIR/issue-57843.rs:25:18: 25:21]: ClonableFn<&'a bool>` is not satisfied
  --> $DIR/issue-57843.rs:25:9
   |
LL |     Foo(Box::new(|_| ()));
   |         ^^^^^^^^^^^^^^^^ the trait `for<'a> ClonableFn<&'a bool>` is not implemented for `[closure@$DIR/issue-57843.rs:25:18: 25:21]`
   |
   = note: required for the cast from `[closure@$DIR/issue-57843.rs:25:18: 25:21]` to the object type `dyn for<'a> ClonableFn<&'a bool>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
